0.9.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialResults.rst.txt
statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialResults
====================================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedNegativeBinomialResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~ZeroInflatedNegativeBinomialResults.aic
    
    
      ~ZeroInflatedNegativeBinomialResults.bic
    
    
      ~ZeroInflatedNegativeBinomialResults.bse
    
    
      ~ZeroInflatedNegativeBinomialResults.conf_int
    
    
      ~ZeroInflatedNegativeBinomialResults.cov_params
    
    
      ~ZeroInflatedNegativeBinomialResults.f_test
    
    
      ~ZeroInflatedNegativeBinomialResults.fittedvalues
    
    
      ~ZeroInflatedNegativeBinomialResults.get_margeff
    
    
      ~ZeroInflatedNegativeBinomialResults.initialize
    
    
      ~ZeroInflatedNegativeBinomialResults.llf
    
    
      ~ZeroInflatedNegativeBinomialResults.llnull
    
    
      ~ZeroInflatedNegativeBinomialResults.llr
    
    
      ~ZeroInflatedNegativeBinomialResults.llr_pvalue
    
    
      ~ZeroInflatedNegativeBinomialResults.load
    
    
      ~ZeroInflatedNegativeBinomialResults.normalized_cov_params
    
    
      ~ZeroInflatedNegativeBinomialResults.predict
    
    
      ~ZeroInflatedNegativeBinomialResults.prsquared
    
    
      ~ZeroInflatedNegativeBinomialResults.pvalues
    
    
      ~ZeroInflatedNegativeBinomialResults.remove_data
    
    
      ~ZeroInflatedNegativeBinomialResults.resid
    
    
      ~ZeroInflatedNegativeBinomialResults.save
    
    
      ~ZeroInflatedNegativeBinomialResults.set_null_options
    
    
      ~ZeroInflatedNegativeBinomialResults.summary
    
    
      ~ZeroInflatedNegativeBinomialResults.summary2
    
    
      ~ZeroInflatedNegativeBinomialResults.t_test
    
    
      ~ZeroInflatedNegativeBinomialResults.t_test_pairwise
    
    
      ~ZeroInflatedNegativeBinomialResults.tvalues
    
    
      ~ZeroInflatedNegativeBinomialResults.wald_test
    
    
      ~ZeroInflatedNegativeBinomialResults.wald_test_terms
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ZeroInflatedNegativeBinomialResults.use_t
   
   