v0.15.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialResults.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedNegativeBinomialResults
=====================================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedNegativeBinomialResults
   :exclude-members: conf_int,cov_params,f_test,get_diagnostic,get_distribution,get_influence,get_margeff,get_prediction,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,score_test,set_null_options,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~ZeroInflatedNegativeBinomialResults.conf_int
      ~ZeroInflatedNegativeBinomialResults.cov_params
      ~ZeroInflatedNegativeBinomialResults.f_test
      ~ZeroInflatedNegativeBinomialResults.get_diagnostic
      ~ZeroInflatedNegativeBinomialResults.get_distribution
      ~ZeroInflatedNegativeBinomialResults.get_influence
      ~ZeroInflatedNegativeBinomialResults.get_margeff
      ~ZeroInflatedNegativeBinomialResults.get_prediction
      ~ZeroInflatedNegativeBinomialResults.info_criteria
      ~ZeroInflatedNegativeBinomialResults.initialize
      ~ZeroInflatedNegativeBinomialResults.load
      ~ZeroInflatedNegativeBinomialResults.normalized_cov_params
      ~ZeroInflatedNegativeBinomialResults.predict
      ~ZeroInflatedNegativeBinomialResults.remove_data
      ~ZeroInflatedNegativeBinomialResults.save
      ~ZeroInflatedNegativeBinomialResults.score_test
      ~ZeroInflatedNegativeBinomialResults.set_null_options
      ~ZeroInflatedNegativeBinomialResults.summary
      ~ZeroInflatedNegativeBinomialResults.summary2
      ~ZeroInflatedNegativeBinomialResults.t_test
      ~ZeroInflatedNegativeBinomialResults.t_test_pairwise
      ~ZeroInflatedNegativeBinomialResults.wald_test
      ~ZeroInflatedNegativeBinomialResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~ZeroInflatedNegativeBinomialResults.aic
      ~ZeroInflatedNegativeBinomialResults.bic
      ~ZeroInflatedNegativeBinomialResults.bse
      ~ZeroInflatedNegativeBinomialResults.fittedvalues
      ~ZeroInflatedNegativeBinomialResults.im_ratio
      ~ZeroInflatedNegativeBinomialResults.llf
      ~ZeroInflatedNegativeBinomialResults.llnull
      ~ZeroInflatedNegativeBinomialResults.llr
      ~ZeroInflatedNegativeBinomialResults.llr_pvalue
      ~ZeroInflatedNegativeBinomialResults.prsquared
      ~ZeroInflatedNegativeBinomialResults.pvalues
      ~ZeroInflatedNegativeBinomialResults.resid
      ~ZeroInflatedNegativeBinomialResults.resid_pearson
      ~ZeroInflatedNegativeBinomialResults.resid_response
      ~ZeroInflatedNegativeBinomialResults.tvalues
      ~ZeroInflatedNegativeBinomialResults.use_t
   
   
   